# langchain-flowspeech

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/langchain/: flowspeech.mdx
src/langchain_flowspeech/: __init__.py  client.py  tools.py
tests/: test_client.py  test_tools.py
