[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "langchain-flowspeech"
version = "0.1.0"
description = "LangChain tools for FlowSpeech text-to-speech generation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "FlowSpeech", email = "support@flowspeech.io" }
]
keywords = ["flowspeech", "langchain", "text-to-speech", "tts", "ai-voice"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27",
  "langchain-core>=0.3,<2.0",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "respx>=0.21",
]

[project.urls]
Homepage = "https://flowspeech.io/"
Documentation = "https://flowspeech.io/docs"
Source = "https://github.com/waeckerlinfederowicz66-sketch/langchain-flowspeech"
Issues = "https://github.com/waeckerlinfederowicz66-sketch/langchain-flowspeech/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_flowspeech"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
